[package]
name = "mcp-server-grok-image"
version = "0.1.0"
edition = "2024"
description = "MCP server for Grok image generation and editing"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
